# eoc

./: .build.yml  .travis.yml  AUTHORS  Makefile.am  NEWS  README  autogen.sh  configure.ac  deb_packages.tar.xz  debian.tar.xz  eoc-common_2.0.0-1_all.deb  eoc-common_2.1.0-1_all.deb  eoc-dbgsym_2.0.0-1_amd64.deb  eoc-dbgsym_2.1.0-1_amd64.deb  eoc-dev_2.0.0-1_amd64.deb  eoc-dev_2.1.0-1_amd64.deb  eoc.pot  eoc_2.0.0-1_amd64.buildinfo  eoc_2.0.0-1_amd64.changes  eoc_2.0.0-1_amd64.deb  eoc_2.1.0-1_amd64.buildinfo  eoc_2.1.0-1_amd64.changes  eoc_2.1.0-1_amd64.deb  gir1.2-eoc-2.0_2.0.0-1_amd64.deb  gir1.2-eoc-2.0_2.1.0-1_amd64.deb  gir1.2-eoc_2.0.0-1_amd64.deb  index.html  makepot  output_fc8cc28f62a702410efbe9956b071e6e3774103e  update-authors.pl
.tx/: config
2023-06-09-091420-31414-1@4aeb10b15ad1_master/: commitmsg  index.html  output_4aeb10b15ad11bcceb9b984bcc758a5dfd639692  report-1384bf.html  report-2a9073.html  report-3a4efb.html  report-4a64f5.html  report-4c9d7d.html  report-5549e8.html  report-56073d.html  report-59f722.html  report-6270c1.html  report-818ca0.html  report-91cb12.html  report-9d175c.html  report-a6b814.html  report-b996bb.html  report-c24bb3.html  report-d10f64.html  report-d524ee.html  report-d71e34.html  report-d74b56.html  report-d7f8ad.html  report-f15e81.html  report-f46d8d.html
2023-06-09-091736-31414-1@bfd5dbd09fbc_devel/: index.html  report-1384bf.html  report-2a9073.html  report-3a4efb.html  report-4a64f5.html  report-4c9d7d.html  report-5549e8.html  report-56073d.html  report-59f722.html  report-6270c1.html  report-818ca0.html  report-91cb12.html  report-9d175c.html  report-a6b814.html  report-b996bb.html  report-c24bb3.html  report-d10f64.html  report-d524ee.html  report-d71e34.html  report-d74b56.html  report-d7f8ad.html  report-f15e81.html  report-f46d8d.html
2023-06-09-092007-0645-cppcheck@bfd5dbd09fbc_devel/: 8.html  output_bfd5dbd09fbc0c4524a90b7b856b4448fce8369d
2023-06-09-092410-31413-1@9a53e52d993d_devel/: index.html  report-1384bf.html  report-2a9073.html  report-3a4efb.html  report-4a64f5.html  report-4c9d7d.html  report-5549e8.html  report-56073d.html  report-59f722.html  report-6270c1.html  report-818ca0.html  report-91cb12.html  report-9d175c.html  report-a6b814.html  report-b996bb.html  report-c24bb3.html  report-d10f64.html  report-d524ee.html  report-d71e34.html  report-d74b56.html  report-d7f8ad.html  report-f15e81.html  report-f46d8d.html
2023-06-09-092622-31414-1@27adb0b7e5b1_devel/: index.html  output_27adb0b7e5b1022e731ee277df3dfe57e6cf1a7e  report-1384bf.html  report-2a9073.html  report-3a4efb.html  report-4a64f5.html  report-4c9d7d.html  report-5549e8.html  report-56073d.html  report-59f722.html  report-6270c1.html  report-818ca0.html  report-91cb12.html  report-9d175c.html  report-a6b814.html  report-b996bb.html  report-c24bb3.html  report-d10f64.html  report-d524ee.html  report-d71e34.html  report-d74b56.html  report-d7f8ad.html  report-f15e81.html  report-f46d8d.html
2023-06-09-092726-8601-cppcheck@9a53e52d993d_devel/: 18.html  (+4 more)
data/: Makefile.am  eoc-image-properties-dialog.ui  eoc-multiple-save-as-dialog.ui  eoc-preferences-dialog.ui  eoc.about  eoc.appdata.xml.in  eoc.css  eoc.desktop.in.in  eoc.pc.in  metadata-sidebar.ui  org.cafe.eoc.gschema.xml.in  org.mate.eoc.gschema.xml.in
data/icons/: Makefile.am
help/: ChangeLog  Makefile.am  eoc.pot
help/C/: index.docbook  legal.xml
help/af/: af.po
help/am/: am.po
help/ar/: ar.po
help/as/: as.po
help/ast/: ast.po
help/be/: be.po
help/bg/: bg.po
help/bn/: bn.po
help/bn_IN/: bn_IN.po
help/br/: br.po
help/ca/: ca.po
help/ca@valencia/: ca@valencia.po
help/cmn/: cmn.po
help/cs/: cs.po
help/da/: da.po
help/de/: de.po
help/dz/: dz.po
help/el/: el.po
help/en_AU/: en_AU.po
help/en_CA/: en_CA.po
help/en_GB/: en_GB.po
help/eo/: eo.po
help/es/: es.po
help/es_AR/: es_AR.po
help/et/: et.po
help/eu/: eu.po
help/fi/: fi.po
help/fr/: fr.po
help/fur/: fur.po
help/ga/: ga.po
help/gl/: gl.po
help/gu/: gu.po
help/he/: he.po
help/hi/: hi.po
help/hr/: hr.po
help/hu/: hu.po
help/hy/: hy.po
help/id/: id.po
help/ie/: ie.po
help/is/: is.po
help/it/: it.po
help/ja/: ja.po
help/ka/: ka.po
help/kab/: kab.po
help/kk/: kk.po
help/kn/: kn.po
help/ko/: ko.po
help/ku/: ku.po
help/ky/: ky.po
help/lt/: lt.po
help/lv/: lv.po
help/mai/: mai.po
help/mk/: mk.po
help/ml/: ml.po
help/mr/: mr.po
help/ms/: ms.po
help/nb/: nb.po
help/ne/: ne.po
help/nl/: nl.po
help/nn/: nn.po
help/oc/: oc.po
help/or/: or.po
help/pa/: pa.po
help/pl/: pl.po
help/ps/: ps.po
help/pt/: pt.po
help/pt_BR/: pt_BR.po
help/ro/: ro.po
help/ru/: ru.po
help/si/: si.po
help/sk/: sk.po
help/sl/: sl.po
help/sq/: sq.po
help/sr/: sr.po
help/sr@latin/: sr@latin.po
help/sv/: sv.po
help/ta/: ta.po
help/te/: te.po
help/th/: th.po
help/tr/: tr.po
help/uk/: uk.po
help/uz/: uz.po
help/vi/: vi.po
help/zh_CN/: zh_CN.po
help/zh_HK/: zh_HK.po
help/zh_TW/: zh_TW.po
jpegutils/: Makefile.am  README.6b  README.8a  transupp-6b.c  transupp-6b.h  transupp-8a.c  transupp-8a.h
src/: Makefile.am  eoc-application-activatable.c  eoc-application-activatable.h  eoc-application-internal.h  eoc-application.c  eoc-application.h  eoc-clipboard-handler.c  eoc-clipboard-handler.h  eoc-close-confirmation-dialog.c  eoc-close-confirmation-dialog.h  eoc-config-keys.h  eoc-debug.c  eoc-debug.h  eoc-enum-types.c.template  eoc-enum-types.h.template  eoc-enums.h  eoc-error-message-area.c  eoc-error-message-area.h  eoc-exif-util.c  eoc-exif-util.h  eoc-file-chooser.c  eoc-file-chooser.h  eoc-image-jpeg.c  eoc-image-jpeg.h  eoc-image-private.h  eoc-image-save-info.c  eoc-image-save-info.h  eoc-image.c  eoc-image.h  eoc-job-queue.c  eoc-job-queue.h  eoc-jobs.c  eoc-jobs.h  eoc-list-store.c  eoc-list-store.h  eoc-metadata-details.c  eoc-metadata-details.h  eoc-metadata-reader-jpg.c  eoc-metadata-reader-jpg.h  eoc-metadata-reader-png.c  (+49 more)
thumbnailer/: Makefile.am  eoc-thumbnailer.c  eoc-thumbnailer.thumbnailer.in
(+1635 files in other folders)
